修复流式输出并发越界崩溃：lines() 改返回快照副本，避免读取时列表增长导致数组越界
Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>